# Advent-of-Code-2024

./: .gitignore  CMakeLists.txt  README.md
day1/: day1.c
day2/: day2.c
day3/: day3.c  day3.sh
day4/: day4.c
day5/: day5.c
day7/: day7.c
libaoc/: CMakeLists.txt  util.c
libaoc/aoc/: util.h
